Turned Off User Text Selection

--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@ Preview: https://repl.it/@IghoiseO/Confetti-Party#index.html
       font: 5vh Arial Black;
       margin-left: 35vw;
       margin-top: 45vh;
+      User-select: none;
       animation: flash 1s ease-in-out alternate infinite;
     }
     @keyframes flash{
